<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewGuide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide_message" />

    <RadioGroup
        android:id="@+id/radioGroupFunction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewGuide"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radioWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_web" />
        <RadioButton
            android:id="@+id/radioTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_tel" />
        <RadioButton
            android:id="@+id/radioSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_sms" />
        <RadioButton
            android:id="@+id/radioMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mail" />
        <RadioButton
            android:id="@+id/radioMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_map" />
        <RadioButton
            android:id="@+id/radioYoutube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_youtube" />
        <RadioButton
            android:id="@+id/radioLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_line" />
<!-- 
        <RadioButton
            android:id="@+id/radioTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_twitter" />
-->
    </RadioGroup>

</RelativeLayout>